tests/src/frontend/typechecking/invalid/name_already_bound.sk
fun main(): void {
  value = 10;
  value = 10;
  print_raw("a")
}
